tag: ignore malformed ID3v2 TDAT frames

Just skip them, don't cause criticals.

https://bugzilla.gnome.org/show_bug.cgi?id=703283